# chain-listener

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  RELEASE_NOTES_0.2.0.md  TECHNICAL_SOLUTION.md  TECHNICAL_SOLUTION.md.backup  chain_listener.md  claude.md  design-protocol.md  pyproject.toml
.claude/: context.md
.claude/prompts/: bug-fixing.md  feature-development.md
.claude/rules/: coding-standards.md  core-principles.md  tdd-workflow.md  tech_solution_spec.md
.claude/templates/: test-template.py
docs/: QUICKSTART.md
examples/: basic_usage.py  config.yaml
examples/bsc_testnet_wbtc_mint_burn_listener/: config.yaml  listener.py  wbtc_factory_mint_events_abi.json  wbtc_mint_burn_abi.json
examples/bsc_usdc_transfer_listener/: listener.py
examples/wbtc_event_listener/: listener.py  sol_wbtc.json
prd/: chain_listener.md  cross_chain.md
solution/: PRIORITY_CONNECTION_MANAGEMENT.md  TECHNICAL_SOLUTION.md
src/chain_listener/: __init__.py  exceptions.py  storage.py  utils.py
src/chain_listener/adapters/: __init__.py  base.py  bsc.py  ethereum.py  evm.py  solana.py  tron.py
src/chain_listener/core/: __init__.py  adapter_registry.py  callback_registry.py  event_processor.py  listener.py  state_manager.py
src/chain_listener/models/: config.py  events.py  state.py
src/chain_listener/storages/redis/: __init__.py  redis.py
src/chain_listener/utils/: __init__.py  address.py  conversion.py  crypto.py  validation.py
tests/integration/: test_core_integration.py  test_end_to_end_flow.py
tests/unit/: test_adapter_registry.py  test_base_adapter.py  test_base_adapter_broken.py  test_bsc_adapter.py  test_callback_registry.py  test_chain_listener.py  test_config.py  test_ethereum_adapter.py  test_event_processor.py  test_events.py  test_listener_comprehensive.py  test_listener_storage_backend.py  test_solana_adapter.py  test_state_manager.py  test_tron_adapter.py  test_utils.py
